Modification couleur bouton, ajouts éléments page produit simple, suppression de la page avec tous les produits par rapport au cahier des charges, ajout d'une page information produits

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,15 @@
 li {
     font-size: 18px;
 }
+
+* {
+    -webkit-box-sizing: content-box;
+       -moz-box-sizing: content-box;
+            box-sizing: content-box;
+  }
+  *:before,
+  *:after {
+    -webkit-box-sizing: content-box;
+       -moz-box-sizing: content-box;
+            box-sizing: content-box;
+  }
